- Dependency injections - New docs for all paths available for api in this moment
